--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,12 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
 }
 
 flutter {
